Policies/egress-aurora.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-aurora
  namespace: aurora-database
spec:
  podSelector:
    matchLabels:
      app: nginx-deploy
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - podSelector:
            matchLabels:
              app: nginx-deploy
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: aurora-database
      ports:
        - protocol: TCP
          port:  5432
