Policies/egress-http.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-http-dns
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx-dev
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:  
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53 
  
    - to:     
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
  
      ports: 
        - protocol: TCP 
          port: 80
